# cprimer-study

./: CMakeLists.txt  main.cpp
c-study-01/: test01.cpp  test02.cpp  test03.c  test04.c
c-study-03/: test3_1.c  test3_4.c  test3_7.c
c-study-04/: test4_1.c  test4_2.c  test4_4.c
c-study-05/: test5_1.c
c-study-06/: test6_1.c
c-study-07/: test7_1.c
c-study-08/: test8_1.c  test8_5.c
c-study-09/: test9_3.c  test9_5.c  test9_7.c
c-study-10/: test10_1.c
c-study-11/: test11_1.c  test11_5.c
c-study-12/: global.c  global1.c  parta.c  partb.c  test12_1.c  test12_4.c
c-study-14/: test14_1.c  test14_10.c
c-study-15/: test15_1.c
c-study-16/: test16_1.c  test16_5.c  test16_6.c
include/: common.c  common.h  myH.c  name_str.c  name_str.h
